# rovos

./: LICENSE  README.md  pyproject.toml
devel/: pyproject.toml
devel/cli/: ragentcli.py  rovoscli.py
devel/cli/agent/: _agtversion.py  _build.py  _create.py  _remove.py
devel/cli/default/: _update.py  _version.py
devel/cli/ws/: _launch.py  _run.py  _where.py
devel/core/: debug.py  node.py  protocol.py  publisher.py  subscriber.py
devel/lib/rovosds/dds/cyclonedds/: __init__.py  __library__.py
devel/lib/rovosds/install/include/dds/: config.h  export.h  features.h  version.h
devel/lib/rovosds/install/include/dds/cdr/: dds_cdrstream.h
devel/lib/rovosds/install/include/dds/ddsc/: dds_loaned_sample.h  (+1 more)
devel/lib/rovosds/install/include/idl/: attributes.h  endian.h  export.h  md5.h  misc.h  version.h
devel/lib/rovosds/install/include/libidlc/: libidlc_export.h
devel/lib/rovosds/install/lib/: cycloneddsidl.lib  cycloneddsidlc.lib  ddsc.lib
devel/lib/rovosds/install/lib/pkgconfig/: CycloneDDS.pc
devel/msgs/: msgs_echo.py  msgs_gen.py
devel/msgs/geometry_msgs/: _Point.py  _PointStamped.py  _Twist.py  _Vector3.py  __init__.py
devel/msgs/msg_struct/: __init__.py
devel/msgs/sensor_msgs/: _Image.py  __init__.py
devel/msgs/std_msgs/: _Float32.py  _Float32MultiArray.py  _Int32.py  _Int32MultiArray.py  _String.py  __init__.py
devel/rovos/: __init__.py
devel/src/example/: package.xml  pyproject.toml
devel/src/example/config/: config.yaml
devel/src/example/example/: listen.py  talk_config.py  talker.py
devel/src/example/launch/: example.launch.py
(+15 files in other folders)
