[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rovos"
version = "1.0.0"
description = "ROVOS Framework - Python Only Build Engine"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Mars", email = "mars@rovos.local" }
]
dependencies = [
    "opencv-python",
    "pyserial"
]

[tool.setuptools]

package-dir = {"" = "devel"}
packages = ["core", "rovos", "msgs"]